modules/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: web
          servicePort: 8080
